welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:7: error: illegal start of simple expression
}
^Poucet:11: error: 'while' expected but '}' found.
	}
        ^